--- a/app.ipynb
+++ b/app.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 1,
       "metadata": {
         "id": "j3zLqIMG-k8P"
       },
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 2,
       "metadata": {
         "id": "vyZwmmVP-k8S"
       },
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 3,
       "metadata": {
         "id": "iy_MI6Pf-k8S"
       },
@@ -107,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 4,
       "metadata": {
         "id": "CkInHe8H-k8T"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 5,
       "metadata": {
         "id": "2sQrwaSS0Z0O"
       },
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 6,
       "metadata": {
         "id": "ljDGkMwa4Ywy"
       },
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -324,7 +324,7 @@
               "3  https://swapi.dev/api/planets/20/  "
             ]
           },
-          "execution_count": 102,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -344,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 8,
       "metadata": {
         "id": "mfTRX52c-npW"
       },
@@ -359,7 +359,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -450,7 +450,7 @@
               "0  https://swapi.dev/api/species/2/  "
             ]
           },
-          "execution_count": 104,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -479,7 +479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 10,
       "metadata": {
         "id": "VGtPEzTx-k8T"
       },
@@ -504,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 11,
       "metadata": {
         "id": "GTZio2rtHAcZ"
       },
@@ -529,7 +529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 12,
       "metadata": {
         "id": "XulO3YkKB424"
       },
@@ -540,7 +540,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 13,
       "metadata": {
         "id": "gTGohN9TC1l-"
       },
@@ -560,7 +560,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -630,7 +630,7 @@
               "2            3           R2-D2         8         2"
             ]
           },
-          "execution_count": 109,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -641,7 +641,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -760,7 +760,7 @@
               "1  https://swapi.dev/api/films/2/       2  "
             ]
           },
-          "execution_count": 110,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -771,7 +771,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -886,7 +886,7 @@
               "1  https://swapi.dev/api/planets/8/         8  "
             ]
           },
-          "execution_count": 111,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -897,7 +897,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -990,7 +990,7 @@
               "0  https://swapi.dev/api/species/2/         2  "
             ]
           },
-          "execution_count": 112,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1010,7 +1010,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 18,
       "metadata": {
         "id": "r6dejc_Q-k8W"
       },
@@ -1023,7 +1023,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 19,
       "metadata": {
         "id": "-4I7TkwF1iNJ"
       },
@@ -1035,7 +1035,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1161,7 +1161,7 @@
               "1            2      6         1         2"
             ]
           },
-          "execution_count": 115,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1184,7 +1184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1202,7 +1202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": 22,
       "metadata": {
         "id": "b7WBBZip-k8X"
       },
@@ -1237,20 +1237,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 23,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "<sqlite3.Cursor at 0x20a3ccfb5c0>"
-            ]
-          },
-          "execution_count": 145,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "conn.execute(\"\"\"\n",
         "    CREATE TABLE IF NOT EXISTS dim_planets(\n",
@@ -1264,26 +1253,7 @@
         "        terrain VARCHAR(60),\n",
         "        surface_water INTEGER\n",
         "    )\n",
-        "\"\"\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 146,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "<sqlite3.Cursor at 0x20a3bc373c0>"
-            ]
-          },
-          "execution_count": 146,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
+        "\"\"\")\n",
         "conn.execute(\"\"\"\n",
         "    CREATE TABLE IF NOT EXISTS dim_films(\n",
         "        filmID INTEGER NOT NULL PRIMARY KEY,\n",
@@ -1291,26 +1261,7 @@
         "        episode_id,\n",
         "        release_date DATE\n",
         "    )\n",
-        "\"\"\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 147,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "<sqlite3.Cursor at 0x20a3cf81240>"
-            ]
-          },
-          "execution_count": 147,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
+        "\"\"\")\n",
         "conn.execute(\"\"\"\n",
         "    CREATE TABLE IF NOT EXISTS dim_characters(\n",
         "        characterID INTEGER NOT NULL PRIMARY KEY,\n",
@@ -1323,26 +1274,7 @@
         "        birth_year VARCHAR(30),\n",
         "        gender VARCHAR(15)\n",
         "    )\n",
-        "\"\"\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 148,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "<sqlite3.Cursor at 0x20a3bc367c0>"
-            ]
-          },
-          "execution_count": 148,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
+        "\"\"\")\n",
         "conn.execute(\"\"\"\n",
         "    CREATE TABLE IF NOT EXISTS dim_species(\n",
         "        specieID INTEGER NOT NULL PRIMARY KEY,\n",
@@ -1356,17 +1288,7 @@
         "        average_lifespan INTEGER,\t\n",
         "        language VARCHAR(30)\n",
         "    )\n",
-        "\"\"\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 149,
-      "metadata": {
-        "id": "mjQyL1-8-k8Z"
-      },
-      "outputs": [],
-      "source": [
+        "\"\"\")\n",
         "conn.execute(\"\"\"\n",
         "    CREATE TABLE IF NOT EXISTS fact_star_wars(\n",
         "        factID INTEGER NOT NULL PRIMARY KEY,\n",
@@ -1377,7 +1299,7 @@
         "    )\n",
         "\"\"\")\n",
         "\n",
-        "conn.commit()"
+        "conn.commit()\n"
       ]
     },
     {
@@ -1391,7 +1313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": 24,
       "metadata": {
         "id": "tQAYL9SY-k8a"
       },
@@ -1406,7 +1328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": 25,
       "metadata": {
         "id": "QiBoJuxy-k8b"
       },
@@ -1488,9 +1410,11 @@
         "        )\n",
         "    \n",
         "    conn.commit()\n",
+        "    conn.close()\n",
         "    print(\"Dados inseridos\")\n",
         "except Exception as e:\n",
         "     conn.rollback()\n",
+        "     conn.close()\n",
         "     print(str(e))"
       ]
     }
