Dashboard com detalhes do personagem finalizado

--- a/app.ipynb
+++ b/app.ipynb
@@ -30,7 +30,8 @@
         "import requests as req\n",
         "import pandas as pd\n",
         "import re as reg\n",
-        "import sqlite3 as slite"
+        "import sqlite3 as slite\n",
+        "import json"
       ]
     },
     {
@@ -56,14 +57,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "id": "vyZwmmVP-k8S"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "82"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "characters = req.get('https://swapi.dev/api/people')\n",
-        "films = req.get('https://swapi.dev/api/films')"
+        "films = req.get('https://swapi.dev/api/films')\n",
+        "\n",
+        "countCharacters = characters.json()\n",
+        "countCharacters = countCharacters['count']\n",
+        "countCharacters"
       ]
     },
     {
@@ -132,6 +148,13 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "OtWTTrh79-94"
@@ -159,8 +182,10 @@
       "source": [
         "unique_urls = df_character['homeworld'].unique()\n",
         "df_planets_list = []\n",
+        "\n",
         "for url in unique_urls:\n",
         "  df_planets_list.append(makeRequest(url))\n",
+        "\n",
         "df_planets = pd.DataFrame(df_planets_list)"
       ]
     },
